# yuren-7b-ascend

./: README.md  pyproject.toml
libs/yuren_core/src/yuren_core/: constants.py
