[project]
name = "yuren"
version = "0.1.0"
description = "Yuren is a open source Instruction-following LLM based on baichuan."
authors = [
    { name = "Pleisto Inc", email = "engineering@pleisto.com" }
]
license = "Apache-2.0"
dependencies = [
    "mindformers==0.3.0",
    "protobuf==3.*",
    "mindspore==1.7.0",
    "setuptools>=68.0.0"
]
readme = "README.md"
requires-python = ">= 3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.274",
    "isort>=5.12.0",
    "black>=23.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.workspace]
members = ["apps/*", "libs/*"]

[tool.rye.scripts]
webui = { cmd = ["python", "-mwebui.app"] }


[tool.ruff]
line-length = 120


[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.isort]
atomic = true
profile = "black"
line_length = 120
py_version = 310
